[rd] Changes file (H:/Covéa/Website) to (./)
this is to allow the file to path find whilst in github

--- a/forgotdetails.html
+++ b/forgotdetails.html
@@ -18,7 +18,7 @@ This is the header
 class="close" title="Close Modal">&times;</span>
 
   <!-- Modal Content -->
-  <form class="modal-content animate" action="H:\COvea\Website\forgotdetails">
+  <form class="modal-content animate" action=".\forgotdetails">
     <div class="imgcontainer">
       <img src="img_avatar2.png" alt="Avatar" class="avatar">
     </div>
