[rd] Claims Added, Cleaned up
Main Page: New boxers to allow policy's
Claims Being added
Motor, Fire, Theft, Lost - pet, High net worth, Home,  unable_Fire, unable_Lost-pet, unable_high, unable_home all being added
All files to allow .index
All files to allow smoother transation and not bound to a hard drive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <button onclick="document.getElementById('id01').style.display='block'" style="width:65%; height: 15%;"><h2>Login</h2></button>
 <!--Uses login to creat a pop up box-->
 <div id="id01" class="modal">
-  <form class="modal-content animate" action="#" method="post"><!--What it should do when confirmed-->
+  <form class="modal-content animate" action="./mainpage.html" method="post"><!--What it should do when confirmed-->
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
@@ -56,7 +56,7 @@
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter a Password" name="psw" required>
-	  
+
 	  <label for="psw"><b>Re-enter Password</b></label>
       <input type="password" placeholder="Please re-enter the password" name="psw" required>
       <button type="submit">Login</button>
