--- a/mainpage.html
+++ b/mainpage.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Welcome - Covéa</title>
-<link href="CSS.css" rel="stylesheet" type="text/css" />
+<link href="./CSS.css" rel="stylesheet" type="text/css" />
 <script src="js.js"></script>
 </head>
 <script>
