--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Welcome - Log in</title>
-<link href="CSS.css" rel="stylesheet" type="text/css" />
+<link href="./CSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="outerbox">
