--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <input type="text" placeholder="Enter Your Policy Number" name="usame" required>
 
       <label for="usame"><b>Username</b></label>
-      <input type="password" placeholder="Enter a Username" name="usame" required>
+      <input type="text" placeholder="Enter a Username" name="usame" required>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter a Password" name="psw" required>
