--- a/mainpage.html
+++ b/mainpage.html
@@ -13,11 +13,35 @@
   <button onclick="myFunction()" class="dropbtn"></button>
   <div id="myDropdown" class="dropdown-content">
    <input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">
-      <a href="#Account">Account</a>
+      <a href="document.getElementById('id01').style.display='block'">Account</a>
       <a href="#contact">Contact</a>
       <a href="#support">Support</a>
       <a href="./index.html">Log out</a>
   </div>
+  <div id="id01" class="modal">
+  <form class="modal-content animate" action="./account.html" method="post"><!--What it should do when confirmed-->
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+	  <!-- Would be picture-->
+      <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
+	  	  <h4>Your Account!</h4>
+    </div>
+	<!--Creates content inside box-->
+    <div class="container">
+	<!--Allows user to put policy number in as a text field-->
+      <label for="uname"><b>Your Policy Number</b></label>
+      <input disabled type="text" min="6" max="6" placeholder="127532" name="uname" required>
+	<!--Allow susers to put password in-->
+      <label for="uname"><b>Username</b></label>
+      <input disabled type="text" placeholder="Monkeylover69420" name="psw" required>
+      <button type="submit">Go further</button>
+    </div>
+	<!--Allows to either cancel or tell us you forgot password -->
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+    </div>
+  </form>
+</div>
   <!-- <h3 style= "text-align: right;"> Policy Number: ${c.c} </h3> -->
 </div>
   <h1 style="text-align: center;"> Covéa insurance </h1>
