--- a/mainpage.html
+++ b/mainpage.html
@@ -13,7 +13,7 @@
   <button onclick="myFunction()" class="dropbtn"></button>
   <div id="myDropdown" class="dropdown-content">
    <input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">
-      <a href="document.getElementById('id01').style.display='block'">Account</a>
+      <button onclick="document.getElementById('id01').style.display='block'" style="width: 20%; height: 10%;">Account</a>
       <a href="#contact">Contact</a>
       <a href="#support">Support</a>
       <a href="./index.html">Log out</a>
@@ -24,21 +24,22 @@
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
       <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  	  <h4>Your Account!</h4>
+	  	  <h3>Your Account!</h3>
     </div>
 	<!--Creates content inside box-->
     <div class="container">
 	<!--Allows user to put policy number in as a text field-->
+	<img src="./images/avatar.png">
       <label for="uname"><b>Your Policy Number</b></label>
       <input disabled type="text" min="6" max="6" placeholder="127532" name="uname" required>
 	<!--Allow susers to put password in-->
       <label for="uname"><b>Username</b></label>
       <input disabled type="text" placeholder="Monkeylover69420" name="psw" required>
-      <button type="submit">Go further</button>
+      <button type="submit" style="width: 50%; height: 10%">Go further</button>
     </div>
 	<!--Allows to either cancel or tell us you forgot password -->
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
     </div>
   </form>
 </div>
