[rd] Changed College to lose line 16

--- a/claims/High net worth.html
+++ b/claims/High net worth.html
@@ -13,7 +13,7 @@
 
           <div class="container">
             <label for="uname"><b>You're Claiming for:</b></label>
-            <input disabled type="text" placeholder="High net worth college" name="uname" required>
+            <input disabled type="text" placeholder="High net worth lose" name="uname" required>
             <label for="uname"><b>Amount claiming for:</b></label>
             <input type="text" placeholder="£..." name="uname" required>
             <button type="submit">Submit</button>
