[rd] Changed insurance to cover line 9

--- a/claims/Home.html
+++ b/claims/Home.html
@@ -6,7 +6,7 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for home insurance</h2>
+      <h2 style="text-align: center;">Covea Claiming for home cover</h2>
       <form action="./unable_home.html" method="post">
         <div class="imgcontainer">
         </div>
