[km] Changed ID01
ive changed  the second name of the username as well i changed the uk number to mobile number

--- a/details/reg.pn.html
+++ b/details/reg.pn.html
@@ -23,9 +23,9 @@
 	  <label for="uname"><b>Your Date of birth</b></label><br>
       <input type="date" placeholder="01/01/2000" name="uname" required><br>
       <label for="uname"><b>Your full name</b></label>
-      <input type="text"  placeholder="John Smith..." name="uname" required>
+      <input type="text"  placeholder="John Doe..." (KM) name="uname" required>
       <label for="uname"><b>Confirm your number</b></label>
-	  <input type="text"  placeholder="Your UK number.." name="uname" required>
+	  <input type="text"  placeholder="Your Mobile Number.." name="uname" required>
       <button type="submit">Authorise me</button>
       <label>
       </label>
