--- a/mainpage.html
+++ b/mainpage.html
@@ -10,16 +10,16 @@
 <div id"outerbox">
 <div id="header">
 <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn" style="width: 25%; height: 25%;"></button>
+  <button onclick="myFunction()" class="dropbtn" style="width: 50%; height: 25%;"></button>
   <div id="myDropdown" class="dropdown-content">
-   <input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">
-      <button onclick="document.getElementById('id01').style.display='block'" style="width: 20%; height: 10%;">Account</a>
-      <button onclick="document.getElementById('id02').style.display='block'" style="width: 20%; height: 10%;">Contact</a>
-      <button onclick="document.getElementById('id03').style.display='block'" style="width: 20%; height: 10%;">Support</a>
-      <button onclick="./Index.html" style="width: 20%; height: 10%;">Logout</a>
+   <!--<input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">-->
+      <button onclick="document.getElementById('id01').style.display='block'" style="width: 20%; height: 10%;">Account</button><br>
+      <button onclick="document.getElementById('id02').style.display='block'" style="width: 20%; height: 10%;">Contact</button><br>
+      <button onclick="document.getElementById('id03').style.display='block'" style="width: 20%; height: 10%;">Support</button><br>
+      <button style="width: 20%; height: 10%;"><a href="./index.html">Logout</a><button>
   </div>
   <div id="id01" class="modal">
-  <form class="modal-content animate" action="./account.html" method="post"><!--What it should do when confirmed-->
+  <form class="modal-content animate" action="./account.html" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
@@ -48,7 +48,7 @@
     <div class="imgcontainer">
       <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
-      <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
+      <img src="./images/avatar.png" alt="Avatar" class="avatar">
 	  	  <h3>Your Account!</h3>
     </div>
 	<!--Creates content inside box-->
@@ -89,32 +89,7 @@
     </div>
 	<!--Allows to either cancel or tell us you forgot password -->
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id03).style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
-    </div>
-  </form>
-</div>
-  <div id="id04" class="modal">
-  <form class="modal-content animate" action="./account.html" method="post"><!--What it should do when confirmed-->
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id04').style.display='none'" class="close" title="Close Modal">&times;</span>
-	  <!-- Would be picture-->
-      <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  	  <h3>Your Account!</h3>
-    </div>
-	<!--Creates content inside box-->
-    <div class="container">
-	<!--Allows user to put policy number in as a text field-->
-	<img src="./images/avatar.png">
-      <label for="uname"><b>Your Policy Number</b></label>
-      <input disabled type="text" min="6" max="6" placeholder="127532" name="uname" required>
-	<!--Allow susers to put password in-->
-      <label for="uname"><b>Username</b></label>
-      <input disabled type="text" placeholder="Monkeylover69420" name="psw" required>
-      <button type="submit" style="width: 50%; height: 10%">Go further</button>
-    </div>
-	<!--Allows to either cancel or tell us you forgot password -->
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id04').style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
+      <button type="button" onclick="document.getElementById('id03').style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
     </div>
   </form>
 </div>
