--- a/claims/motor.html
+++ b/claims/motor.html
@@ -7,15 +7,19 @@
 <div id="outerbox">
     <div id="main">
       <h2 style="text-align: center;">Covea Claiming for motor cover</h2>
-      <form action="...html" method="post">
+      <form action="motor_claiming.html" method="post">
         <div class="imgcontainer">
         </div>
-
           <div class="container">
             <label for="uname"><b>You're Claiming for:</b></label>
             <input disabled type="text" placeholder="Motor cover" name="uname" required>
-            <label for="uname"><b>Location</b></label>
-            <input type="text" placeholder="Enter your locaion" name="uname" required>
+            <label for="uname"><b>Vechile</b>
+            <input type="text" list="numplates" name="number plates" placeholder="Enter your vechile number plate" name="uname" required  /></label>
+            <datalist id="numplates">
+              <option value="YG12 2JD">
+              <option value="DH23 1HD">
+              <option value="ur4 f1n">
+            </datalist>
             <button type="submit">Submit</button>
           </div>
           <div class="container_var">
