--- a/mainpage.html
+++ b/mainpage.html
@@ -29,17 +29,18 @@
 	<!--Creates content inside box-->
     <div class="container">
 	<!--Allows user to put policy number in as a text field-->
-	<img src="./images/avatar.png">
-      <label for="uname"><b>Your Policy Number</b></label>
+	<img src="./images/avatar.png" class="Avatar" style="text-align: center;">
+      <label for="uname" style="text-align: center;"><b>Your Policy Number</b></label>
       <input disabled type="text" min="6" max="6" placeholder="127532" name="uname">
 	<!--Allow susers to put password in-->
       <label for="uname"><b>Username</b></label>
       <input disabled type="text" placeholder="Monkeylover69420" name="uname">
-      <button type="submit" style="width: 50%; height: 10%">Go further</button>
+      <!-- <button type="submit" style="width: 50%; height: 10%">Go further</button> -->
     </div>
 	<!--Allows to either cancel or tell us you forgot password -->
     <div class="container" style="background-color:#f1f1f1">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
+      <button type="submit" style="width: 50%; height: 10%">Go further</button>
     </div>
   </form>
 </div>
