[km] changed buttons
allign better and made font bigger

--- a/mainpage.html
+++ b/mainpage.html
@@ -23,13 +23,14 @@
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
+	  <img src="./images/avatar.png" class="Avatar" style="text-align: center;">
       <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
 	  	  <h3>Your Account!</h3>
     </div>
 	<!--Creates content inside box-->
     <div class="container">
 	<!--Allows user to put policy number in as a text field-->
-	<img src="./images/avatar.png" class="Avatar" style="text-align: center;">
+	<!--<img src="./images/avatar.png" class="Avatar" style="text-align: center;">-->
       <label for="uname" style="text-align: center;"><b>Your Policy Number</b></label>
       <input disabled type="text" min="6" max="6" placeholder="127532" name="uname">
 	<!--Allow susers to put password in-->
@@ -39,8 +40,8 @@
     </div>
 	<!--Allows to either cancel or tell us you forgot password -->
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width: 50%; height: 10%">Cancel</button>
-      <button type="submit" style="width: 50%; height: 10%">Go further</button>
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width: 49%; height: 10%"><h2>Cancel</h2?</button>
+      <button type="submit" style="width: 49%; height: 10%"><h2>Go further</h2></button>
     </div>
   </form>
 </div>
