[rd] Changed Index, Colour Scheme, Main page
Working on questions

--- a/mainpage.html
+++ b/mainpage.html
@@ -115,31 +115,31 @@
 <div id="main">
   <div id="policy">
     <h1>You have <B> Motor </b> Insurance</h1>
-      <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/motor.html"> Make a Claim now!</a></button>
+      <a href="./claims/motor.html"><button style="width: 90%; height: 30%; font-size: 40px;"> Make a Claim now!</button></a>
 
   </div>
   <div id="policy_alt">
     <h1>You have <B> Lost Pet </b> Insurance</h1>
-      <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/Lost%20-%20Pet.html"> Make a Claim now!</a></button>
+    <a href="./claims/Lost%20-%20Pet.html">  <button style="width: 90%; height: 30%; font-size: 40px;"> Make a Claim now!</button></a>
 
     </div>
     <div id="policy_al">
       <h1>You have <B> Fire </b> Insurance</h1>
-        <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/fire.html"> Make a Claim now!</a></button>
+      <a href="./claims/fire.html">  <button style="width: 90%; height: 30%; font-size: 40px;"> Make a Claim now!</button></a>
 
       </div>
       <div id="policy">
         <h1>You have <B> Home </b> Insurance</h1>
-          <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/Home.html"> Make a Claim now!</a></button>
+        <a href="./claims/Home.html" > <button style="width: 90%; height: 30%; font-size: 40px;"> Make a Claim now!</button></a>
       </div>
       <div id="policy_alt">
         <h1>You have <B> Theft </b> Insurance</h1>
-          <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/Theft.html"> Make a Claim now!</a></button>
+          <a href="./claims/Theft.html"> <button style="width: 90%; height: 30%; font-size: 40px;">Make a Claim now!</button></a>
 
         </div>
         <div id="policy_al">
           <h1>You have <B> High net worth </b> Insurance</h1>
-            <button style="width: 90%; height: 30%; font-size: 40px;"><a href="./claims/High%20net%20worth.html"> Make a Claim now!</a></button>
+          <a href="./claims/High%20net%20worth.html"><button style="width: 90%; height: 30%; font-size: 40px;"> Make a Claim now!</button></a>
           </div>
 </div>
 </div>
