--- a/forgotdetails.html
+++ b/forgotdetails.html
@@ -12,34 +12,40 @@ This is the header
 <!-- Button to open the modal login form -->
 <button onclick="document.getElementById('id01').style.display='block'">Login</button>
 
-<!-- The Modal -->
+<!-- The Modal Form -->
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'"
 class="close" title="Close Modal">&times;</span>
 
-  <!-- Modal Content -->
+  <!-- Code For The Modal Content -->
   <form class="modal-content animate" action=".\forgotdetails">
     <div class="imgcontainer">
       <img src="img_avatar2.png" alt="Avatar" class="avatar">
     </div>
-
+  
+    <!-- Code for the enter policy number box -->
     <div class="container">
       <label for="uname"><b>Policy number</b></label>
       <input type="text" placeholder="Enter your Policy number" name="uname" required>
-
+  
+      <!-- Code for the enter password box -->
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-
+  
+      <!-- Code for the login button and the remember me button -->
       <button type="submit">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
     </div>
-
+  
+    <!-- Code for the cancel button and forgot details button -->
     <div class="container" style="background-color:#f1f1f1">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot or don't know your <a onclick="document.getElementById('id02').style.display='block'">details?</a></span>
     </div>
+    
+    <!-- code for getting the modal up when they press forget details button and code for closing the modal when the user clicks off it -->
   </form>
 </div>
 <script>
