--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </div>
 	<!--Creates content inside box-->
     <div class="container">
-	<!--Allows user to put policy number in as a text field-->
+	<!--Allows user to input policy number in as a text field-->
       <label for="uname"><b>Policy Number</b></label>
       <input type="text" min="6" max="6" placeholder="Enter your policy number" name="uname" required>
-	<!--Allow susers to put password in-->
+	<!--Allows users to put password in-->
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
       <button type="submit">Login</button>
@@ -48,15 +48,16 @@
 	  <h4>Register with us!</h4>
     </div>
     <div class="container">
+      <!--Placeholder is named as username and tells the user to input their policy number-->
       <label for="usame"><b>Policy Number</b></label>
       <input type="text" placeholder="Enter Your Policy Number" name="usame" required>
-
+      <!--This is used as an input box which the user is told to input their username. -->
       <label for="usame"><b>Username</b></label>
       <input type="text" placeholder="Enter a Username" name="usame" required>
-
+      <!--The user inputs a password which is secure and the placeholder tells the user to input this. -->
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter a Password" name="psw" required>
-
+      <!--The user inputs a verification of the 1st entry of the password and if they do not match the user will be asked to re-enter their personal password. -->
 	  <label for="psw"><b>Re-enter Password</b></label>
       <input type="password" placeholder="Please re-enter the password" name="psw" required>
       <button type="submit">Login</button>
