--- a/mainpage.html
+++ b/mainpage.html
@@ -14,7 +14,7 @@
               <button onclick="document.getElementById('id01').style.display='block'" style="width: 90%; height: 20%;">Account</button><br>
               <button onclick="document.getElementById('id02').style.display='block'" style="width: 90%; height: 20%;">Contact</button><br>
               <button onclick="document.getElementById('id03').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
-              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
+              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Logout</button><br>
           </div>
           <div id="id01" class="modal">
             <form class="modal-content animate" action="./account.html" method="post">
