--- a/details/reg.pn.html
+++ b/details/reg.pn.html
@@ -8,7 +8,7 @@
 <div id="mainlog">
 <h1>Welcome to Covéa</h1>
 <!--Creates "Login" button-->
-<button onclick="document.getElementById('id01').style.display='block'" style="width:65%; height: 25%;"><h2>I don't know my polcy number</h2></button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:65%; height: 25%;"><h2>I don't know my policy number</h2></button>
 <!--Uses login to creat a pop up box-->
 <div id="id01" class="modal">
   <form class="modal-content animate" action="./reg.pn/192102935.html" method="post"><!--What it should do when confirmed-->
