--- a/Hotels.html
+++ b/Hotels.html
@@ -14,7 +14,7 @@
               <button onclick="document.getElementById('id01').style.display='block'" style="width: 90%; height: 20%;">Account</button><br>
               <button onclick="document.getElementById('id02').style.display='block'" style="width: 90%; height: 20%;">Contact</button><br>
               <button onclick="document.getElementById('id03').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
-              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
+              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Logout</button><br>
           </div>
           <div id="id01" class="modal">
             <form class="modal-content animate" action="./account.html" method="post">
@@ -114,7 +114,7 @@
         <p align="left"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10014.721323070415!2d1.3089583770573443!3d51.13280423565022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6a958ca23350a480!2sTravelodge%20Dover!5e0!3m2!1sen!2suk!4v1573135144556!5m2!1sen!2suk" width="65%" height="40%" text-align: "center";frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       <div id="footer">
       <br> <br> <br> <br> Rebooking of the Ferry
-      
+
 
       </div>
     </div>
