--- a/motor.html
+++ b/motor.html
@@ -22,7 +22,7 @@
               <option value="Crash">
               <option value="Flat Tire">
               <option value="Oil leak">
-              <option value="Collicon(Not with other car)">
+              <option value="Collision(Not with other car)">
               <option value="Other(Please type in box)">
             </datalist>
           </div>
