[LS] Spelling and Grammar checking and editing.

--- a/claims/Fire.html
+++ b/claims/Fire.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Claming - fire</title>
+  <title>Claiming - fire</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
