--- a/claims/High net worth.html
+++ b/claims/High net worth.html
@@ -6,13 +6,13 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for a High net worth lose</h2>
+      <h2 style="text-align: center;">Covea claiming for a high net worth lose</h2>
       <form action="./unable_high.html" method="post">
         <div class="imgcontainer">
         </div>
 
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="High net worth lose" name="uname" required>
             <label for="uname"><b>Amount claiming for:</b></label>
             <input type="text" placeholder="£..." name="uname" required>
