[rd] Mainpage.html updated

--- a/mainpage.html
+++ b/mainpage.html
@@ -14,14 +14,14 @@
               <button onclick="document.getElementById('id01').style.display='block'" style="width: 90%; height: 20%;">Account</button><br>
               <button onclick="document.getElementById('id02').style.display='block'" style="width: 90%; height: 20%;">Contact</button><br>
               <button onclick="document.getElementById('id03').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
-              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Logout</button><br>
+              <button onclick="document.getElementById('id04').style.display='block'" style="width: 90%; height: 20%;">Support</button><br>
           </div>
           <div id="id01" class="modal">
             <form class="modal-content animate" action="./account.html" method="post">
               <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
         	       <!-- Would be picture-->
-        	        <img src="./images/avatar.png" class="Avatar" style="text-align: center;">
+        	        <!--img src="./images/avatar.png" class="Avatar" style="text-align: center;">-->
                   <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
         	  	  <h3>Your Account!</h3>
               </div>
