--- a/claims/Home.html
+++ b/claims/Home.html
@@ -6,13 +6,13 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for home cover</h2>
+      <h2 style="text-align: center;">Covea claiming for home cover</h2>
       <form action="./unable_home.html" method="post">
         <div class="imgcontainer">
         </div>
 
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Home cover" name="uname" required>
             <button type="submit">Submit</button>
           </div>
