[LS] spelling and grammar

--- a/claims/Lost - Pet.html
+++ b/claims/Lost - Pet.html
@@ -6,13 +6,13 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for a lost pet</h2>
+      <h2 style="text-align: center;">Covea claiming for a lost pet</h2>
       <form action="./unable_pet.html" method="post">
         <div class="imgcontainer">
         </div>
 
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Lost pet cover" name="uname" required>
             <label for="uname"><b>Pets name</b></label>
             <input type="text" placeholder="Buddy.." name="uname" required>
