[LS] Spelling and Grammar

--- a/claims/Theft.html
+++ b/claims/Theft.html
@@ -6,13 +6,13 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for theft</h2>
+      <h2 style="text-align: center;">Covea claiming for theft</h2>
       <form action="./unable_theft.html" method="post">
         <div class="imgcontainer">
         </div>
 
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Theft cover" name="uname" required>
             <label for="uname"><b>Items lost</b></label>
             <input type="text" placeholder="TV, Chair, Car" name="uname" required>
