[LS] Spelling and Grammar

--- a/claims/motor.html
+++ b/claims/motor.html
@@ -6,15 +6,15 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for motor cover</h2>
+      <h2 style="text-align: center;">Covea claiming for motor cover</h2>
       <form action="motor_claiming.html" method="post">
         <div class="imgcontainer">
         </div>
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Motor cover" name="uname" required>
-            <label for="uname"><b>Vechile</b>
-            <input type="text" list="numplates" name="number plates" placeholder="Enter your vechile number plate" name="uname" required  /></label>
+            <label for="uname"><b>Vehicle</b>
+            <input type="text" list="numplates" name="number plates" placeholder="Enter your vehicle number plate" name="uname" required  /></label>
             <datalist id="numplates">
               <option value="YG12 2JD">
               <option value="DH23 1HD">
