[LS]Spelling and Grammar

--- a/claims/unable_fire.html
+++ b/claims/unable_fire.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <title>Unable to rearch service</title>
+  <title>Unable to reach service</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
   <script src="js.js"></script>
 </head>
 <body>
-  <div id="outterbox">
+  <div id="outerbox">
     <div id="mainlog">
       <h1>Welcome to Covéa</h1>
-      <h2>Sorry to inform you but your <b>FIRE</b> cover is unavailable on our mobile app at the moment. If this is an emergency call 999 then call us immediateley on 01484 999101. Please vist your local branch, Halifax dean clough<br> sorry for any inconvience! <br></h2>
+      <h2>Sorry to inform you but your <b>FIRE</b> cover is unavailable on our mobile app at the moment. If this is an emergency call 999 then call us immediately on 01484 999101. Please vist your local branch, Halifax dean clough<br> sorry for any inconvience! <br></h2>
       <!--<button onclick="random()"style="width:65%; height: 15%">Generate your unique refernce number</button>
       <p id="gen"></p> -->
       <button style="width:65%; height: 15%"><a href="../mainpage.html"><h2>Home</h2></a></button>
