[LS]Spelling and Grammar

--- a/claims/unable_high.html
+++ b/claims/unable_high.html
@@ -5,7 +5,7 @@
   <script src="js.js"></script>
 </head>
 <body>
-  <div id="outterbox">
+  <div id="outerbox">
     <div id="mainlog">
       <h1>Welcome to Covéa</h1>
       <h2>Sorry to inform you but your <b>HIGH NET WORTH</b> cover is unavailable on our mobile app at the moment .If this is an emergency call 999 then call us immediately on 01484 999101. Please vist your local branch, Halifax dean clough<br> sorry for any inconvenience! <br></h2>
