--- a/details/reg.pw/192102935.html
+++ b/details/reg.pw/192102935.html
@@ -4,7 +4,7 @@
 <link href="../../CSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div id="outterbox">
+<div id="outerbox">
 <div id="mainlog">
 <h1>Welcome to Covéa</h1>
 <h2>Please enter the code we sent you:<h2>
