[LS]Spelling and Grammar

--- a/details/reg.pw.html
+++ b/details/reg.pw.html
@@ -9,14 +9,14 @@
 <h1>Welcome to Covéa</h1>
 <!--Creates "Login" button-->
 <button onclick="document.getElementById('id01').style.display='block'" style="width:65%; height: 25%;"><h2>I forgot my password</h2></button>
-<!--Uses login to creat a pop up box-->
+<!--Uses login to create a pop up box-->
 <div id="id01" class="modal">
   <form class="modal-content animate" action="./reg.pw/192102935.html" method="post"><!--What it should do when confirmed-->
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 	  <!-- Would be picture-->
       <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  	  <h4>Polciy number</h4>
+	  	  <h4>Policy number</h4>
     </div>
 	<!--Creates content inside box-->
     <div class="container">
@@ -43,7 +43,7 @@
     <div class="imgcontainer">
       <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
       <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  <h4>We're happy to see you want to use our serive! to be apart of our team please vist your <br> local branch, Halifax Dean clough. or Call us at: 01484 0000000</h4>
+	  <h4>We're happy to see you want to use our service! to be apart of our team please visit your <br> local branch, Halifax Dean clough. or Call us at: 01484 0000000</h4>
     </div>
     <div class="container">
       <button type="submit">Go Back to log in</button>
