[LS]Spelling and Grammar

--- a/claims/Technology.html
+++ b/claims/Technology.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Claming - Technology</title>
+  <title>Claiming - Technology</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -11,9 +11,9 @@
         <div class="imgcontainer">
         </div>
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Technology Cover" name="uname" required>
-            <label for="uname"><b>Amount of devises</b></label>
+            <label for="uname"><b>Amount of devices</b></label>
             <input type="text" placeholder="£..." name="uname" required>
             <button type="submit">Submit</button>
           </div>
