[LS]Spelling and Grammar

--- a/claims/unable_tech.html
+++ b/claims/unable_tech.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <title>Unable to rearch servise</title>
+  <title>Unable to reach service</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
   <script src="js.js"></script>
 </head>
 <body>
-  <div id="outterbox">
+  <div id="outerbox">
     <div id="mainlog">
       <h1>Welcome to Covéa</h1>
-      <h2>Sorry to inform you but your <b>Technology</b> cover is unavaible to be applied for now.<br></h2>
+      <h2>Sorry to inform you but your <b>Technology</b> cover is unavailable to be applied for now.<br></h2>
       <a href="../mainpage.html"><button style="width:65%; height: 15%"><h2>Home</h2></button></a>
     </div>
 </div>
