[LS]Spelling and Grammar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--Creates "Login" button-->
 <button onclick="document.getElementById('id01').style.display='block'" class="main_login" style="width:50%; height: 15%; text-align: center;"><h2>Login</h2></button>
 <br><button onclick="document.getElementById('id02').style.display='block'" class="main_login" style="width:50%; height: 15%"><h2>Register</h2></button>
-<!--Uses login to creat a pop up box-->
+<!--Uses login to create a pop up box-->
 <div id="id01" class="modal">
   <form class="modal-content animate" action="./mainpage.html" method="post"><!--What it should do when confirmed-->
     <div class="imgcontainer">
