[rd] Changed Directivoeri

--- a/claims/motor.html
+++ b/claims/motor.html
@@ -7,7 +7,7 @@
 <div id="outerbox">
     <div id="main">
       <h2 style="text-align: center;">Covea claiming for motor cover</h2>
-      <form action="motor_claiming.html" method="post">
+      <form action="Questions.html" method="post">
         <div class="imgcontainer">
         </div>
           <div class="container">
