[LS]Spelling and Grammar

--- a/claims/Questions.html
+++ b/claims/Questions.html
@@ -31,7 +31,7 @@
             </div>
             <!--Creates content inside box-->
          <div class="container">
-           <!--Allow usrrs to put what happened-->
+           <!--Allow users to put what happened-->
           <label for="ACCIDENT"><b>What has happened?</b></label>
           <input  list="q1" type="text" placeholder="" name="ACCIDENT" required>
             <datalist id="q1">
@@ -47,7 +47,7 @@
           </div>
         </form>
       </div>
-      <div id="id02" class="modal"> <!--Was there cctv?-->
+      <div id="id02" class="modal"> <!--Was there CCTV?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
@@ -124,9 +124,9 @@
               <option value="Engine">
               <option value="Boot">
               <option value="Driver-side door">
-              <option value="Passangers-side door">
+              <option value="Passengers-side door">
               <option value="Roof">
-              <option value="Wheel's">
+              <option value="Wheels">
               <option value="N/A">
             </datalist>
           </div>
@@ -148,8 +148,8 @@
             <label for="DMGPT2"><b>Was There any where else?</b></label required>
             <input  list="DMGPT2" type="text" placeholder="" name="DMGPT2">
             <datalist id="DMGPT2">
-              <option value="Yes, Frount Side of vechile">
-              <option value="Yes, Behind of vechile">
+              <option value="Yes, Front Side of vehicle">
+              <option value="Yes, Behind of vehicle">
               <option value="No">
               <option value="Yes, Other (Type In own words)">
               <option value="N/A">
@@ -161,7 +161,7 @@
           </div>
         </form>
       </div>
-      <div id="id07" class="modal"> <!--How many people was involed in the accident?-->
+      <div id="id07" class="modal"> <!--How many people was involved in the incident?-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
@@ -170,7 +170,7 @@
             <input type="p" list="title_list" placeholder="Question Seven" name="title">
           </div>
           <div class="container">
-            <label for="PEOLPLE"><b>How many people was involed in the incident?</b></label required>
+            <label for="PEOLPLE"><b>How many people was involved in the incident?</b></label required>
             <input  list="People" type="text" placeholder="" name="People">
             <datalist id="People">
               <option value="1-4">
@@ -184,7 +184,7 @@
           </div>
         </form>
       </div>
-      <div id="id08" class="modal"> <!--Is there any Dash cam evidence-->
+      <div id="id08" class="modal"> <!--Is there any dash-cam evidence-->
         <form class="modal-content animate">
           <div class="imgcontainer">
             <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
@@ -193,7 +193,7 @@
             <input type="p" list="title_list" placeholder="Question Eight" name="title">
           </div>
           <div class="container">
-            <label for="DASH"><b>Is there any dash came evidence?</b></label required>
+            <label for="DASH"><b>Is there any dash-cam evidence?</b></label required>
             <input  list="DASH" type="text" placeholder="" name="DASH">
             <datalist id="DASH">
               <option value="Yes">
@@ -244,7 +244,7 @@
             <datalist id="IFSO">
               <option value="N/A">
               <option value="Moderate">
-              <option value="Serve">
+              <option value="Severe">
               <option value="Dead">
             </datalist>
           </div>
@@ -263,11 +263,11 @@
             <input type="p" list="title_list" placeholder="PREMIUME!" name="title">
           </div>
           <div class="container">
-            <label for="confirm"><b>You're Entitled to our advance service please confirm</b></label required><br>
+            <label for="confirm"><b>You're entitled to our advance service please confirm</b></label required><br>
               <input type="checkbox" name="Hotel" value="hotel"> Do you need a hotel?<br>
               <input type="checkbox" name="Ferry" value="ferry"> Do you need your ferry re-booking?<br>
               <input type="checkbox" name="transport" value="taxi">Do you need transport to the hotel?<br><br><br>
-              <input type="checkbox" name="confrim" value="Confirm" required> YOU UNDERSTAND YOUR AWNSER ARE CORRECT!<br>
+              <input type="checkbox" name="confirm" value="Confirm" required> YOU UNDERSTAND YOUR ANSWERS ARE CORRECT!<br>
           </div>
           <div class="container" style="background-color:#f1f1f1">
             <button type="button" onclick=" document.getElementById('id11').style.display='none'" class="cancelbtn" style="width: 45%; height: auto;"><h3>Go back</h3></button>
